--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -9,7 +9,7 @@
 
     <uses-sdk android:minSdkVersion="15" android:targetSdkVersion="22"/>
     <application>
-        <activity android:name="org.fengwx.GifViewer"
+        <activity android:name="viewer.GifViewer"
                   android:theme="@android:style/Theme.Holo">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
